--- a/admin.html
+++ b/admin.html
@@ -3,132 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LVG Kino - Админ-панель</title>
+    <title>Админ-панель LVG Kino</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e') no-repeat center/cover;
-        }
-        h1, h2 {
-            text-align: center;
-            color: #fff;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            max-width: 400px;
-            margin: 20px auto;
-            background-color: rgba(255, 255, 255, 0.9);
-            padding: 20px;
-            border-radius: 10px;
-        }
-        label {
-            font-weight: bold;
-            color: #333;
-        }
-        input, select, button {
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        button {
-            background-color: #28a745;
-            color: white;
-            cursor: pointer;
-            border: none;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        button.delete {
-            background-color: #dc3545;
-        }
-        button.delete:hover {
-            background-color: #c82333;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        li {
-            margin: 10px 0;
-            padding: 10px;
-            background-color: rgba(255, 255, 255, 0.9);
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
+        body { font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; }
+        form { display: flex; flex-direction: column; gap: 10px; }
+        label { font-weight: bold; }
+        input, button { padding: 10px; font-size: 16px; border: 1px solid #ccc; border-radius: 5px; }
+        button { background-color: #007bff; color: white; border: none; cursor: pointer; }
+        button:hover { background-color: #0056b3; }
     </style>
 </head>
 <body>
-    <h1>LVG Kino - Админ-панель</h1>
-    <h2>Добавить сеанс</h2>
+    <h1>Админ-панель LVG Kino</h1>
     <form id="session-form">
-        <label for="movie">Фильм:</label>
-        <input type="text" id="movie" required>
         <label for="date">Дата:</label>
         <input type="date" id="date" required>
+        <label for="movie">Фильм:</label>
+        <input type="text" id="movie" required>
         <label for="time">Время:</label>
         <input type="time" id="time" required>
-        <button type="submit">Добавить</button>
+        <button type="submit">Добавить сеанс</button>
     </form>
-    <h2>Сеансы и брони</h2>
-    <ul id="sessions"></ul>
-
     <script>
-        // Загрузка сеансов
-        let sessions = JSON.parse(localStorage.getItem('sessions') || '[]');
-        const sessionsList = document.getElementById('sessions');
-
-        function renderSessions() {
-            sessionsList.innerHTML = '';
-            sessions.forEach((session, index) => {
-                const key = `seats_${session.movie}_${session.date}_${session.time}`;
-                const bookings = JSON.parse(localStorage.getItem(key) || '[]');
-                const li = document.createElement('li');
-                li.innerHTML = `
-                    ${session.movie} | ${session.date} | ${session.time}
-                    <br>Брони: ${bookings.length ? bookings.map(s => `${s.type === 'pouf' ? `Пуф р0-${s.col + 1}` : s.type === 'sofa' ? `Диван р${s.row + 1}д${s.col + 1} (${s.count} чел.)` : `Угловой р${s.row + 4}уд${s.col + 1} (${s.count} чел.)`}`).join(', ') : 'Нет'}
-                    <br><button class="delete" data-index="${index}">Удалить</button>
-                `;
-                sessionsList.appendChild(li);
-            });
-        }
-
-        // Добавление сеанса
-        document.getElementById('session-form').addEventListener('submit', (e) => {
+        document.getElementById('session-form').addEventListener('submit', async (e) => {
             e.preventDefault();
-            const movie = document.getElementById('movie').value;
             const date = document.getElementById('date').value;
+            const movie = document.getElementById('movie').value;
             const time = document.getElementById('time').value;
-            sessions.push({ movie, date, time });
-            localStorage.setItem('sessions', JSON.stringify(sessions));
-            localStorage.setItem('sessions_updated', Date.now());
-            document.getElementById('session-form').reset();
-            renderSessions();
-        });
-
-        // Удаление сеанса
-        sessionsList.addEventListener('click', (e) => {
-            if (e.target.classList.contains('delete')) {
-                const index = e.target.dataset.index;
-                const session = sessions[index];
-                const key = `seats_${session.movie}_${session.date}_${session.time}`;
-                localStorage.removeItem(key);
-                sessions.splice(index, 1);
-                localStorage.setItem('sessions', JSON.stringify(sessions));
-                localStorage.setItem('sessions_updated', Date.now());
-                renderSessions();
+            try {
+                const response = await fetch('https://lvgkino.ru/.netlify/functions/sessions', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ date, movie, time })
+                });
+                const data = await response.json();
+                alert('Сеанс добавлен: ' + JSON.stringify(data));
+                document.getElementById('session-form').reset();
+            } catch (error) {
+                alert('Ошибка: ' + error.message);
             }
         });
-
-        // Инициализация
-        renderSessions();
     </script>
 </body>
 </html>
